<resources>
    <string name="app_name">WeWish</string>
    <string name="username">Username</string>
    <string name="btLogin">Login</string>
    <string name="btCreate">Create new user</string>
    <string name="alreadyExist">Username is taken. Choose another one :-)</string>
    <string name="wrongUsername">User does not exist. Try again :-)</string>
    <string name="blankwishlist">Please write a email in the textfield</string>
    <string name="blankwishname">Please give your wish a name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="errorEmail">Please enter Email</string>
    <string name="errorPassword">Please enter password</string>
    <string name="birthdate">Select your birthdate</string>
    <string name="done">Done</string>

    <string name="priority">Priority:</string>
    <string name="price">Price:</string>
    <string name="comment">Comments:</string>
    <string name="signout">Sign out</string>
    <string name="add_wish">Add new wish</string>
    <string name="add_wish_list">Add new wish list</string>
    <string name="back">Back</string>
    <string name="delete">Delete</string>

    <string name="add_wish_title">Add new wish</string>
    <string name="add_wish_list_title">Add new wish list</string>
    <string name="add_wish_description">Fill in following text fields to
        add a new wish to your wish list</string>
    <string name="add_wish_list_description">Type in e-mail of the person
        whose wish list you would like to subscribe to</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="enter_email">E-mail...</string>
    <string name="mywishes">My wishes</string>

    <string name="yourwish">What is your wish?</string>
    <string name="yourprice">Do you know the price?</string>
    <string name="wantwish">How much do you want the wish?</string>
    <string name="addcomments">Add comments to your wish</string>
    <string name="addurl">You can insert an url if you wish..</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="alert_time_title">Birthday soon!!</string>
    <string name="birthdatetext">has birthday in two weeks! Remember to buy a present</string>
    <string name="no_wish">No wish is chosen</string>
    <string name="url">Homepage:</string>
    <string name="noURL">There is no homepage to open...</string>
</resources>
