<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/userimage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/user"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        />

    <EditText
        android:id="@+id/email"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_below="@+id/userimage"
        android:layout_centerHorizontal="true"/>
    <EditText
        android:id="@+id/password"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_below="@+id/email"
        android:layout_centerHorizontal="true"
        />
    <EditText
        android:id="@+id/username"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:layout_below="@+id/password"
        android:visibility="invisible"
        android:layout_centerHorizontal="true"/>


    <TextView
        android:id="@+id/textview1"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        android:visibility="invisible"
        android:textSize="20dp"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:text="@string/birthdate"
        />

    <TextView
        android:id="@+id/birthdate"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview1"
        android:visibility="invisible"
        android:textSize="20dp"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:hint="01-01-2000"
        />

    <Button
        android:id="@+id/login"
        android:text="@string/btLogin"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/birthdate"
        android:layout_centerHorizontal="true"
        />
    <Button
        android:id="@+id/create"
        android:text="@string/btCreate"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login"
        android:layout_centerHorizontal="true"
        />
    <Button
        android:id="@+id/done"
        android:text="@string/done"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/create"
        android:visibility="invisible"
        android:layout_centerHorizontal="true"
        />


</RelativeLayout>


</android.support.constraint.ConstraintLayout>