<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtWishNameAlert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/yourwish" />

    <EditText
        android:id="@+id/editWishNameAlert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textIsSelectable="true" />

    <TextView
        android:id="@+id/txtPriceAlert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yourprice" />

    <EditText
        android:id="@+id/editPriceAlert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textIsSelectable="true"
        android:inputType="numberDecimal"/>

    <TextView
        android:id="@+id/txtPriorityAlert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wantwish" />

    <EditText
        android:id="@+id/editPriorityAlert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textIsSelectable="true"/>

    <TextView
        android:id="@+id/txtCommentsAlert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addcomments" />

    <EditText
        android:id="@+id/editCommentsAlert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textIsSelectable="true"/>

    <TextView
        android:id="@+id/txtUrlAlert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addurl" />

    <EditText
        android:id="@+id/editUrlAlert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textIsSelectable="true"/>


</LinearLayout>
