<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsFragment">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout1"
        android:fadeScrollbars="false"
        android:scrollbarSize="10dp"
        android:fillViewport="true">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="500dp">

            <TextView
                android:id="@+id/txtWishNameChange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:textSize="28sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:minWidth="120dp"
                android:text="@string/price"
                app:layout_constraintBottom_toTopOf="@+id/txtPriority"
                app:layout_constraintEnd_toStartOf="@+id/txtPriceChange"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtWishNameChange" />

            <TextView
                android:id="@+id/txtPriceChange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:textStyle="bold"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                app:layout_constraintBaseline_toBaselineOf="@+id/txtPrice"
                app:layout_constraintStart_toEndOf="@+id/txtPrice" />

            <TextView
                android:id="@+id/txtPriority"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:minWidth="120dp"
                android:text="@string/priority"
                app:layout_constraintBottom_toTopOf="@+id/txtComments"
                app:layout_constraintEnd_toStartOf="@+id/txtPriorityChange"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtPrice" />

            <TextView
                android:id="@+id/txtPriorityChange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:textStyle="bold"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                app:layout_constraintBaseline_toBaselineOf="@+id/txtPriority"
                app:layout_constraintStart_toEndOf="@+id/txtPriority" />

            <TextView
                android:id="@+id/txtComments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:minWidth="120dp"
                android:text="@string/comment"
                app:layout_constraintBottom_toTopOf="@+id/txtUrl"
                app:layout_constraintEnd_toStartOf="@+id/txtCommentsChange"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtPriority" />

            <TextView
                android:id="@+id/txtCommentsChange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@+id/txtComments"
                app:layout_constraintStart_toEndOf="@+id/txtComments" />

            <TextView
                android:id="@+id/txtUrl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:minWidth="120dp"
                android:text="@string/url"
                android:textSize="22sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/txtUrlChange"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtComments" />

            <TextView
                android:id="@+id/txtUrlChange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:maxWidth="200dp"
                android:maxLines="1"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@+id/txtUrl"
                app:layout_constraintStart_toEndOf="@+id/txtUrl" />

            <Button
                android:id="@+id/btnOpenUrl"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/open_url"
                android:padding="0dp"
                android:scaleType="fitCenter"
                app:layout_constraintBaseline_toBaselineOf="@+id/txtUrl"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.913"
                app:layout_constraintStart_toEndOf="@+id/txtUrlChange" />


        </android.support.constraint.ConstraintLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btnBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:text="@string/back"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnDelete"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:text="@string/delete"
            android:visibility="invisible"
            app:layout_constraintBaseline_toBaselineOf="@+id/btnBack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnBack" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>